fix overflow

--- a/layouts/home/style.css
+++ b/layouts/home/style.css
@@ -218,6 +218,10 @@ body {
     text-decoration: underline
 }
 
+.tweet-body {
+    line-break: anywhere;
+}
+
 .tweet-body,
 .tweet-interact,
 .tweet-body-text-quote {
