--- a/layouts/notifications/style.css
+++ b/layouts/notifications/style.css
@@ -222,6 +222,10 @@ body {
     text-decoration: underline
 }
 
+.tweet-body {
+    line-break: anywhere;
+}
+
 .tweet-body,
 .tweet-interact,
 .tweet-body-text-quote {
