--- a/layouts/tweet/style.css
+++ b/layouts/tweet/style.css
@@ -227,6 +227,10 @@ body {
     text-decoration: underline
 }
 
+.tweet-body {
+    line-break: anywhere;
+}
+
 .tweet-body,
 .tweet-interact,
 .tweet-body-text-quote {
